# Clash_of_Clans

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGES_SUMMARY.md  CMakeLists.txt  README.html  README.md  TESTING_GUIDE.md  联网对战使用说明.md
Clash_of_Clans_1.0_Group32.exe/Resources/units/giant/: 分类.txt
Clash_of_Clans_1.0_Group32.exe/Resources/units/goblin/: 分类.txt
Clash_of_Clans_1.0_Group32.exe/Resources/units/wall_breaker/: 分类.txt
Classes/: AccountSelectScene.cpp  AccountSelectScene.h  AppDelegate.cpp  BattleScene.cpp  BattleScene.h  Building.cpp  Building.h  DraggableMapScene.cpp  DraggableMapScene.h  GridMap.cpp  GridMap.h  HelloWorldScene.cpp  Hero.cpp  Hero.h  HeroManager.cpp  HeroManager.h  Pathfinder.h  convert_encoding.py  lines.py
Classes/App/: AppDelegate.cpp
Classes/Audio/: AudioConfig.cpp  AudioConfig.h  AudioHelper.cpp  AudioHelper.h  AudioManager.cpp  AudioManager.h  AudioTypes.h
Classes/Buildings/: ArmyBuilding.cpp  ArmyBuilding.h  ArmyCampBuilding.cpp  ArmyCampBuilding.h  BaseBuilding.cpp  BaseBuilding.h  BuildersHutBuilding.cpp  BuildersHutBuilding.h  BuildingConfig.h  BuildingData.h  BuildingUpgradeUI.cpp  BuildingUpgradeUI.h  DefenseBuilding.cpp  DefenseBuilding.h  ResourceBuilding.cpp  ResourceBuilding.h  TownHallBuilding.cpp  TownHallBuilding.h  WallBuilding.cpp  WallBuilding.h
Classes/GridMap/: GridMap.cpp  GridMap.h
Classes/Managers/: AccountManager.cpp  AccountManager.h  BattleManager.cpp  BattleManager.h  BuildingCapacityManager.cpp  BuildingCapacityManager.h  BuildingLimitManager.cpp  BuildingLimitManager.h  BuildingManager.cpp  BuildingManager.h  ClanDataCache.cpp  ClanDataCache.h  DefenseLogSystem.cpp  DefenseLogSystem.h  DeploymentValidator.cpp  DeploymentValidator.h  GameConfig.cpp  GameConfig.h  GameDataModels.h  GameDataSerializer.h  GlobalAudioManager.cpp  GlobalAudioManager.h  HUDLayer.cpp  HUDLayer.h  HeroManager.cpp  InputController.cpp  InputController.h  MapConfigManager.cpp  MapConfigManager.h  MapController.cpp  MapController.h  MusicManager.cpp  MusicManager.h  NetworkManager.cpp  NetworkManager.h  OccupiedGridOverlay.cpp  OccupiedGridOverlay.h  ReplaySystem.cpp  ReplaySystem.h  ResourceCollectionManager.cpp  (+19 more)
Classes/Managers/Classes/: AppDelegate.cpp  AppDelegate.h  Building.cpp  Building.h  DraggableMapScene.cpp  DraggableMapScene.h  GridMap.cpp  GridMap.h  HelloWorldScene.cpp  HelloWorldScene.h  Hero.cpp  Hero.h  HeroManager.cpp  HeroManager.h
Classes/Managers/Classes/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Classes/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Classes/Scenes/: AccountSelectScene.cpp  AccountSelectScene.h  BattleScene.cpp  BattleScene.h  DraggableMapScene.cpp  DraggableMapScene.h  DraggableMapScene_Old.cpp.bak
Classes/Services/: BuildingUpgradeService.cpp  BuildingUpgradeService.h  ClanService.cpp  ClanService.h
Classes/UI/: ArmySelectionUI.cpp  BattleUI.cpp  BattleUI.h  BuildingHealthBarUI.cpp  BuildingHealthBarUI.h  ClanPanel.cpp  ClanPanel.h  LoadingLayer.cpp  LoadingLayer.h  PlayerListItem.cpp  PlayerListItem.h  PlayerListLayer.cpp  PlayerListLayer.h  ResourceCollectionUI.cpp  ResourceCollectionUI.h  SettingsPanel.cpp  SettingsPanel.h  UnitHealthBarUI.cpp  UnitHealthBarUI.h  UpgradeTimerUI.h
Classes/Unit/: ArcherUnit.cpp  ArcherUnit.h  BarbarianUnit.cpp  BarbarianUnit.h  BaseUnit.cpp  BaseUnit.h  CombatStats.h  GiantUnit.cpp  GiantUnit.h  GoblinUnit.cpp  GoblinUnit.h  PathFinder.cpp  PathFinder.h  TrainingUI.cpp  TrainingUI.h  UnitFactory.h  UnitTypes.h  WallBreakerUnit.cpp  WallBreakerUnit.h  unit.cpp  unit.h
Docs/: DraggableMapScene重构指南.md  使用指南.md  功能丢失-完整修复方案.md  功能修复报告-建筑拖动和UI按钮.md  功能完全恢复-最终报告.md  建筑交互功能说明.md  异步多人游戏测试指南.md  快速参考.md  设置面板使用指南.md  设置面板功能实现报告.md  重构完成-最终总结.md  重构完成报告.md  重构完成最终报告.md  链接错误修复指南.md  问题解决总结.md
Resources/archer/archer/: archer.xml.animation
Resources/archer/archer/Backup/: NormalCloseTag.xml
Resources/archer/archer/Ruler/: archer.xml
Resources/units/archer/: 分类.txt
Resources/units/barbarian/: 素材分类.txt
Server/: ArenaSession.cpp  ArenaSession.h  ClanHall.cpp  ClanHall.h  ClanInfo.h  ClanWarRoom.cpp  ClanWarRoom.h  CommandDispatcher.cpp  CommandDispatcher.h  MatchMaker.cpp  MatchMaker.h  NetworkUtils.cpp  NetworkUtils.h  PlayerRegistry.cpp  PlayerRegistry.h  Protocol.h  Server.cpp  Server.h  Server.vcxproj  Server.vcxproj.filters  ServerMain.cpp  WarModels.h  clan_data.txt
docs/: README.md
proj.android/app/: build.gradle
proj.android/app/res/values/: strings.xml
proj.win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelloCpp.sln  HelloCpp.vcxproj  HelloCpp.vcxproj.filters  PVP_测试说明.md  SYNC_RESOURCE-HelloCpp.vcxproj  SYNC_RESOURCE-HelloCpp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  联网PVP修复说明.md
proj.win32/Visual Studio 18 2026/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelloCpp.sln  HelloCpp.vcxproj  HelloCpp.vcxproj.filters  SYNC_RESOURCE-HelloCpp.vcxproj  SYNC_RESOURCE-HelloCpp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
proj.win32/engine/cocos/core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  cocos2d.vcxproj  cocos2d.vcxproj.filters  cocos2d_libs.sln
server.exe/: Clash_of_Clans.exp  Clash_of_Clans.lib  clan_data.txt
(+7 files in other folders)
